[package]
name = "hsml"
version = "0.1.0"
authors = ["Christopher Quadflieg <chrissi92@hotmail.de>"]
edition = "2024"
description = "A pug-inspired HTML preprocessor"
repository = "https://github.com/Shinigami92/hsml"
license = "MIT"
keywords = ["hsml", "html", "preprocessor"]
categories = [
    "api-bindings",
    "command-line-utilities",
    "compilers",
    "parser-implementations",
]
exclude = [
    "/.github",
    "/.vscode",
    "example.hsml",
    "example2.hsml",
    "finite_state_machine.dot",
    "notes.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.31", features = ["cargo"] }
nom = "7.1.3"
wasm-bindgen = "0.2.86"
